--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,10 @@
 /* header and nav layout */
+header {
+  background-color: var(--background-color-dark, #374550);
+}
+
 header .nav-wrapper {
-  background-color: var(--background-color-dark, var(--background-color));
+  background-color: var(--background-color-dark, #374550);
   color: var(--text-color-inverted, #fff);
   width: 100%;
   z-index: 2;
@@ -148,14 +152,21 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
-  font-size: var(--heading-font-size-s);
+  flex-basis: 160px;
+  font-size: 18px;
   font-weight: var(--font-weight-bold);
+  font-family: var(--font-family-heading);
   line-height: 1;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+header nav .nav-brand a {
+  text-decoration: none;
 }
 
 header nav .nav-brand img {
-  width: 128px;
+  width: 160px;
   height: auto;
 }
 
